--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Mini-Project Starter</title>
-  </head>
-  <body>
-    <h1>Mini-Project Starter</h1>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>User List</title>
+</head>
+
+<body>
+
+  <header class="mb-5">
+    <div class="container mt-5">
+      <div class="d-flex justify-content-end">
+        <div class="btn-group">
+          <button type="button" class="btn btn-secondary btn-sm" data-bs-theme-value="dark">dark</button>
+          <button type="button" class="btn btn-light btn-sm" data-bs-theme-value="light">light</button>
+        </div>
+      </div>
+      <h1 class="mb-4">Users</h1>
+      <div class="row">
+        <div class="col-md-4 form-control form-control-lg">Search Users</div>
+        <div class="col-md-8"></div>
+      </div>
+    </div>
+  </header>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/darkmodetoggle.js"></script>
+</body>
+
 </html>
